<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BudgetingApp</string>

    <string name="s_date">Start Date</string>
    <string name="e_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="export">Export Report</string>

    <string name="transactions_title">Transactions</string>
    <string name="search_by_note">Search by note</string>
    <string name="new_transaction">New Transaction</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_edit_transaction">Add / Edit Transaction</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="filter_all">All</string>
    <string name="filter_income">Income</string>
    <string name="filter_expense">Expense</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="hint_amount">Amount</string>
    <string name="amount_hint">Amount (e.g. 500)</string>
    <string name="hint_category">Category</string>
    <string name="category">Category</string>
    <string name="hint_note_optional">Note (Optional)</string>
    <string name="notes">Notes (Optional)</string>

    <string name="enter_amount">Enter Contribution Amount</string>
    <string name="contribute">Contribute</string>
</resources>
