<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="#F5F7FA">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/new_transaction"
        android:gravity="center|center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="#0056b3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F3E5F5"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="2dp">
        <RadioButton
            android:id="@+id/radioIncome"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/income"
            android:textAlignment="center"
            android:padding="10dp"
            android:checked="true"/>



        <RadioButton
            android:id="@+id/radioExpense"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/expense"
            android:textAlignment="center"
            android:padding="10dp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="transactionAmount" android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="transactionNotes" android:hint="@string/notes"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:background="@drawable/edit_text_border"/>
    <Button
        android:id="@+id/btnPickDate"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Select Date"
        android:textColor="#2196F3" /> <TextView
    android:id="@+id/tvSelectedDate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginBottom="20dp"
    android:text="No date selected"
    android:textSize="16sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:backgroundTint="#0056b3"
        android:textColor="#FFFFFF"
        android:layout_marginTop="24dp"/>

</LinearLayout>
